# audacious-plugin-highlyadvanced

./: .cproject  .gitignore  .project  Makefile  README  aclocal.m4  buildsys.mk.in  config.h  config.h.in  configure  configure.ac  extra.mk.in  gsf.cpp  gsf.h  plugin.c
VBA/: GBA.cpp  Sound.cpp  Util.cpp  memgzio.c  psftag.c  unzip.h  zutil.h
